# AgentForge

./: .gitignore  README.md  VISION.md  dashboard.py  forge.py  install.sh  pyproject.toml
agents/: architecture.md  backend.md  docs.md  frontend.md  review.md  testing.md
core/: cost_router.py  dag.py  discovery.py  events.py  orchestrator.py  plugins.py
docs/: GETTING_STARTED.md  PATTERNS.md
providers/: base.py  registry.py
templates/: forge.yaml
