[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-forge"
version = "0.1.0"
description = "Provider-agnostic multi-agent orchestration. Route any task to the cheapest capable AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "docker>=7.0",
    "gitpython>=3.1",
]

[project.scripts]
forge = "forge:cli"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
